Correct text align in terminal tables

--- a/packages/social-trader/src/pages/trades/binance-trade-page/trading/order-book/order-book.module.scss
+++ b/packages/social-trader/src/pages/trades/binance-trade-page/trading/order-book/order-book.module.scss
@@ -44,8 +44,8 @@ $order-book-row-height: 16px;
     th {
       width: 33.3%;
     }
-    & th:last-child,
-    & td:last-child {
+    & th:not(:first-child),
+    & td:not(:first-child) {
       text-align: right;
     }
   }
